--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Meine Website(emil)</title>
+        <title>Meine Website(Emil)</title>
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,12 +11,11 @@
     </head>
     <body>
        <div>
-            <h1>Ich mag Menschen</h1>
-            <div><h4>(auch die schlechten)</h4>
-            </div>        
+            <h1 class="Überschrift">Das bin ich</h1>
+            
         </div>
         <div id="box">
-            <h2>Menschen</h2>
+            
         </div>
     </body>
 </html>
