habe eine neue Box eingefügt und werde dann noch so eine machen und noch was damit verlinken Hintergrund wird noch verbessert u.ä. Es kann nur noch besser werden

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
             <h1 class="Überschrift">Das bin ich</h1>
             
         </div>
-        <div id="box">
-            
+        <div id="box" class="boxilein">
+            <h1 class="smiley">:-)</h1>
         </div>
+        <h1 element class="Empfehlung">Das ist eines der zwei besten Dojos in Stade:</h1>
+        <div id="box" class="boxy"></div>
     </body>
 </html>
