--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <div id="box" class="boxilein">
             <h1 class="smiley">:-)</h1>
         </div>
-        <h1 element class="Empfehlung">Das ist eines der zwei besten Dojos in Stade:</h1>
-        <div id="box" class="boxy"></div>
+        <h1>Das ist eines der zwei besten Dojos in Stade:</h1>
+        <div id="box2">
+
+        </div>
     </body>
 </html>
