--- a/index.html
+++ b/index.html
@@ -17,9 +17,20 @@
         <div id="box" class="boxilein">
             <h1 class="smiley">:-)</h1>
         </div>
-        <h1>Das ist eines der zwei besten Dojos in Stade:</h1>
-        <div id="box2">
+        <div>
 
+        </div>
+        <div>
+            
+       
+        <div>
+                <div>
+                    <h1>Das ist eines (DAS EINE) der zwei besten Dojos in Stade:</h1> 
+                </div>
+            </div>
+        </div>
+        <div id="box2">
+            <a href="https://www.vfl-stade.de/abteilungen/karate-kobudo"><h2>1 Das ist</h2></a>
         </div>
     </body>
 </html>
